Fix clicking on iOS

--- a/assets/main.css
+++ b/assets/main.css
@@ -1,5 +1,7 @@
 html {
     font-size: 12px;
+    touch-action: manipulation;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 .option {
